# git-slides

./: Cargo.toml  Makefile  README.md
src/: cmd.rs  git.rs  lib.rs  main.rs
src/cmd/: output.rs
tests/: test_bin_git-slides.rs
tests/git/: mod.rs
