[package]
name = "git-slides"
version = "0.4.0"
edition = "2021"

authors = ["Quentin Richert <noreply@richert.co>"]
description = "Navigate through Git commits like presentation slides."
license = "GPL-3.0-or-later"
repository = "https://github.com/qrichert/git-slides.git"
readme = "README.md"
keywords = ["git", "presentation", "cli"]
categories = ["command-line-utilities"]

[profile.release]
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
# Output text through a pager.
lessify = "0.3.0"
